# langgraph-agentops-studio

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
agents/: __init__.py  analyst.py  executor.py  planner.py  research.py  reviewer.py  supervisor.py
app/: api.py  ingest.py  main.py  runner.py
artifacts/: __init__.py  exporter.py
config/: defaults.yaml
docs/: architecture.md  evidence.md  governance.md  providers.md  rag.md  testing.md  web_search.md
examples/: compare_platforms.json
examples/knowledge_base/: langgraph_overview.md  provider_strategy.md
examples/sample_output/: README.md  decision_record.json  final_report.md  run_artifact.json
graph/: __init__.py  builder.py  research_subgraph.py  routing.py
prompts/: __init__.py  analyst.py  executor.py  planner.py  research.py  reviewer.py
schemas/: __init__.py  models.py  state.py
services/: __init__.py  checkpoint.py  config.py  embeddings.py  evidence.py  governance.py  llm.py  logging.py  recommendation.py  retrieval.py  runtime.py  serialization.py  storage.py  vectorstore.py  web_grounding.py  web_reader.py  web_search.py
tests/: __init__.py  test_config.py  test_evidence_pipeline.py  test_executor.py  test_governance.py  test_grounding_merge.py  test_retrieval.py  test_storage_tools.py  test_web_reader.py  test_web_search.py
tools/: __init__.py  evidence.py  factory.py  ingestion.py  parsers.py  research_grounding.py  retrieval.py  storage.py  tracing.py  web_reader.py  web_search.py  writing.py
web/: README.md  index.html  package-lock.json  package.json
(+11 files in other folders)
