[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agentops-studio"
version = "1.0.0"
description = "LangGraph AgentOps Studio: evidence-driven multi-agent workflows with policy-based governance and grounded retrieval."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langchain>=0.3.20",
  "langchain-core>=0.3.50",
  "langchain-text-splitters>=0.3.6",
  "langgraph>=0.2.60",
  "openai>=1.63.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "qdrant-client>=1.13.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
]
observability = [
  "langsmith>=0.1.130",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "agents*", "graph*", "schemas*", "services*", "prompts*", "tools*", "artifacts*"]
